--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -5,27 +5,28 @@
 
 * Mission Statement
 
-- Address build issues; the build must work reliably and the tests
-  must give us confidence that we did not break the code generator
-  across the entire feature set.
 - Start the planning towards v2: get a good idea of what we think is
   in and what should be out. Make the product backlog reflect this
   triage.
+- Address build issues; the build must work reliably and the tests
+  must give us confidence that we did not break the code generator
+  across the entire feature set.
 
 * Stories
 
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-04 Thu 17:43]
+#+CAPTION: Clock summary at [2018-10-04 Thu 17:56]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:34* |       |      |   0.0 |
+| *Total time*                                                                | *17:46* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:34   |       |      |   0.0 |
-| Active                                                                      |         | 17:34 |      |   0.0 |
+| Stories                                                                     | 17:46   |       |      |   0.0 |
+| Active                                                                      |         | 17:46 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:30 |   0.0 |
+| Sprint and product backlog grooming                                         |         |       | 0:12 |   0.0 |
 | Update readme to reflect org move                                           |         |       | 1:58 |   0.0 |
 | Create project for C# test model                                            |         |       | 5:23 |   0.0 |
 | Fix boost path serialisation errors                                         |         |       | 0:47 |   0.0 |
@@ -75,7 +76,10 @@ Due to the transition of organisations, we did not generate any binaries for thi
 - [[https://www.linkedin.com/feed/update/urn:li:activity:6354361007493775361][LinkedIn]]
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
-*** Sprint and product backlog grooming                               :story:
+*** STARTED Sprint and product backlog grooming                       :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-04 Thu 17:44]--[2018-10-04 Thu 17:56] =>  0:12
+    :END:
 
 Updates to sprint and product backlog.
 
@@ -388,3 +392,22 @@ Problems:
   make it a unordered set of pointers.
 
 ** Deprecated
+*** CANCELLED Create a build script just for C#                       :story:
+    CLOSED: [2018-10-04 Thu 17:50]
+
+*Rationale*: no longer needed after the split of reference models.
+
+At the moment we are doing C++ and C# on the same build script, making
+it really complex. It would be much easier to have a separate C# build
+script. We should also have a separate install script for C# so we
+don't have to waste time installing packages if we're not going to use
+them.
+
+*** CANCELLED Create a new exoelement chain                           :story:
+    CLOSED: [2018-10-04 Thu 17:54]
+
+*Rationale*: given the amount of churn the refactor stories have had,
+this story is no longer relevant.
+
+We need to create a new exoelement chain that uses the new exoelements
+to bootstrap a endomodel.
