--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -17,20 +17,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-05 Fri 11:25]
+#+CAPTION: Clock summary at [2018-10-05 Fri 11:36]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *20:04* |       |      |   0.0 |
+| *Total time*                                                                | *20:14* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 20:04   |       |      |   0.0 |
-| Active                                                                      |         | 20:04 |      |   0.0 |
+| Stories                                                                     | 20:14   |       |      |   0.0 |
+| Active                                                                      |         | 20:14 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:30 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 2:30 |   0.0 |
 | Update readme to reflect org move                                           |         |       | 1:58 |   0.0 |
 | Create project for C# test model                                            |         |       | 5:23 |   0.0 |
 | Fix boost path serialisation errors                                         |         |       | 0:47 |   0.0 |
 | Create project for C++ test model                                           |         |       | 6:55 |   0.0 |
+| Update readme with information on reference models                          |         |       | 0:10 |   0.0 |
 | Remove test models from dogen project                                       |         |       | 1:01 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -223,6 +224,15 @@ Notes:
 
 It seems this model is also a LAM model. Add it to C#.
 
+*** COMPLETED Update readme with information on reference models      :story:
+    CLOSED: [2018-10-05 Fri 11:36]
+    :LOGBOOK:
+    CLOCK: [2018-10-05 Fri 11:26]--[2018-10-05 Fri 11:36] =>  0:10
+    :END:
+
+We need to add some minor blurb about MASD and refer to the reference
+implementation.
+
 *** STARTED Remove test models from dogen project                     :story:
     :LOGBOOK:
     CLOCK: [2018-10-04 Thu 16:42]--[2018-10-04 Thu 17:43] =>  1:01
@@ -235,11 +245,6 @@ all references to test models:
 - delete test data sets;
 - remove environment variables (WITH_CSHARP, WITH_CPP etc);
 - comment out generation tests for now (JSON and Dia).
-
-*** Update readme with information on reference models                :story:
-
-We need to add some minor blurb about MASD and refer to the reference
-implementation.
 
 *** Split dogen testing from core                                     :story:
 
